--- a/cats_vs_dog.ipynb
+++ b/cats_vs_dog.ipynb
@@ -22,6 +22,7 @@
     "colab": {
       "name": "cats-vs-dog.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "accelerator": "GPU"
@@ -35,76 +36,6 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/kheirie/cats-vs-dogs/blob/main/cats_vs_dog.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FesIR9PI6evl",
-        "outputId": "1e83b8d3-f16e-4d35-cca2-86650192dea4"
-      },
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Mounted at /content/drive\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "aEei1j_n6tDK",
-        "outputId": "2d28ae57-76b7-44d0-8957-b89b5e46f522"
-      },
-      "source": [
-        "%cd drive/MyDrive/dogs-vs-cats/"
-      ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/content/drive/MyDrive/dogs-vs-cats\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "f_K18Up7U065",
-        "outputId": "075cc0df-3174-422c-e104-d663241fe917"
-      },
-      "source": [
-        "!ls"
-      ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            " cats-vs-dog.ipynb  'Copy of cats-vs-dog.ipynb'   data.zip\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
